// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSetGrid Adding DataSet Control main-container button to the container 1`] = `
<body>
  <div>
    <div
      class="DataSetControl_main-container"
      style="max-height: 693px;"
    >
      <div
        class="DataSetControl_grid-container"
      >
        <div>
          <div
            class="DataSetControl_grid-norecords"
          >
            undefined
          </div>
        </div>
      </div>
      <button
        class="DataSetControl_LoadMoreButton_Hidden_Style DataSetControl_LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`DataSetGrid Destroy should work 1`] = `
<body>
  <div>
    <div
      class="DataSetControl_main-container"
      style="max-height: 693px;"
    >
      <div
        class="DataSetControl_grid-container"
      >
        <div>
          <div
            class="DataSetControl_grid-norecords"
          >
            undefined
          </div>
        </div>
      </div>
      <button
        class="DataSetControl_LoadMoreButton_Hidden_Style DataSetControl_LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`DataSetGrid Get sorted Columns 1`] = `
<body>
  <div>
    <div
      class="DataSetControl_main-container"
    >
      <div
        class="DataSetControl_grid-container"
      />
      <button
        class="DataSetControl_LoadMoreButton_Hidden_Style DataSetControl_LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`DataSetGrid Init should work 1`] = `
<body>
  <div>
    <div
      class="DataSetControl_main-container"
    >
      <div
        class="DataSetControl_grid-container"
      />
      <button
        class="DataSetControl_LoadMoreButton_Hidden_Style DataSetControl_LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`DataSetGrid Load More Button 1`] = `
<body>
  <div>
    <div
      class="DataSetControl_main-container"
      style="max-height: 693px;"
    >
      <div
        class="DataSetControl_grid-container"
      >
        <div>
          <div
            class="DataSetControl_grid-norecords"
          >
            undefined
          </div>
        </div>
      </div>
      <button
        class="DataSetControl_LoadMoreButton_Hidden_Style DataSetControl_LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`DataSetGrid Load More Button 2`] = `
<body>
  <div>
    <div
      class="DataSetControl_main-container"
      style="max-height: 693px;"
    >
      <div
        class="DataSetControl_grid-container"
      >
        <div>
          <div
            class="DataSetControl_grid-norecords"
          >
            undefined
          </div>
        </div>
      </div>
      <button
        class="DataSetControl_LoadMoreButton_Hidden_Style DataSetControl_LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`DataSetGrid Render multiple rows 1`] = `
<body>
  <div>
    <div
      class="DataSetControl_main-container"
      style="max-height: 693px;"
    >
      <div
        class="DataSetControl_grid-container"
      >
        <div>
          <div
            class="DataSetControl_grid-item"
            rowrecid="0023-2190139-12213-5643"
          >
            <p
              class="DataSetControl_grid-text-label"
            >
              Mocked Column : 
            </p>
            <p
              class="DataSetControl_grid-text-value"
            >
              undefined
            </p>
            <p
              class="DataSetControl_grid-text-label"
            >
              Second Mocked Column : 
            </p>
            <p
              class="DataSetControl_grid-text-value"
            >
              undefined
            </p>
          </div>
          <div
            class="DataSetControl_grid-item"
            rowrecid="0023-2190139-12213-5646"
          >
            <p
              class="DataSetControl_grid-text-label"
            >
              Mocked Column : 
            </p>
            <p
              class="DataSetControl_grid-text-value"
            >
              undefined
            </p>
            <p
              class="DataSetControl_grid-text-label"
            >
              Second Mocked Column : 
            </p>
            <p
              class="DataSetControl_grid-text-value"
            >
              undefined
            </p>
          </div>
          <div
            class="DataSetControl_grid-item"
            rowrecid="0023-2190139-12213-5641"
          >
            <p
              class="DataSetControl_grid-text-label"
            >
              Mocked Column : 
            </p>
            <p
              class="DataSetControl_grid-text-value"
            >
              undefined
            </p>
            <p
              class="DataSetControl_grid-text-label"
            >
              Second Mocked Column : 
            </p>
            <p
              class="DataSetControl_grid-text-value"
            >
              undefined
            </p>
          </div>
        </div>
      </div>
      <button
        class="DataSetControl_LoadMoreButton_Hidden_Style DataSetControl_LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`DataSetGrid Render multiple rows sorted 1`] = `
<body>
  <div>
    <div
      class="DataSetControl_main-container"
      style="max-height: 693px;"
    >
      <div
        class="DataSetControl_grid-container"
      >
        <div>
          <div
            class="DataSetControl_grid-item"
            rowrecid="0023-2190139-12213-5643"
          >
            <p
              class="DataSetControl_grid-text-label"
            >
              Mocked Column : 
            </p>
            <p
              class="DataSetControl_grid-text-value"
            >
              undefined
            </p>
            <p
              class="DataSetControl_grid-text-label"
            >
              Second Mocked Column : 
            </p>
            <p
              class="DataSetControl_grid-text-value"
            >
              undefined
            </p>
          </div>
          <div
            class="DataSetControl_grid-item"
            rowrecid="0023-2190139-12213-5646"
          >
            <p
              class="DataSetControl_grid-text-label"
            >
              Mocked Column : 
            </p>
            <p
              class="DataSetControl_grid-text-value"
            >
              undefined
            </p>
            <p
              class="DataSetControl_grid-text-label"
            >
              Second Mocked Column : 
            </p>
            <p
              class="DataSetControl_grid-text-value"
            >
              undefined
            </p>
          </div>
          <div
            class="DataSetControl_grid-item"
            rowrecid="0023-2190139-12213-5641"
          >
            <p
              class="DataSetControl_grid-text-label"
            >
              Mocked Column : 
            </p>
            <p
              class="DataSetControl_grid-text-value"
            >
              undefined
            </p>
            <p
              class="DataSetControl_grid-text-label"
            >
              Second Mocked Column : 
            </p>
            <p
              class="DataSetControl_grid-text-value"
            >
              undefined
            </p>
          </div>
        </div>
      </div>
      <button
        class="DataSetControl_LoadMoreButton_Hidden_Style DataSetControl_LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`DataSetGrid Row Click Event handler for the associated row when being clicked 1`] = `
<body>
  <div>
    <div
      class="DataSetControl_main-container"
      style="max-height: 693px;"
    >
      <div
        class="DataSetControl_grid-container"
      >
        <div>
          <div
            class="DataSetControl_grid-item"
            rowrecid="0023-2190139-12213-5646"
          >
            <p
              class="DataSetControl_grid-text-label"
            >
              Mocked Column : 
            </p>
            <p
              class="DataSetControl_grid-text-value"
            >
              undefined
            </p>
            <p
              class="DataSetControl_grid-text-label"
            >
              Second Mocked Column : 
            </p>
            <p
              class="DataSetControl_grid-text-value"
            >
              undefined
            </p>
          </div>
        </div>
      </div>
      <button
        class="DataSetControl_LoadMoreButton_Hidden_Style DataSetControl_LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`DataSetGrid Update View should Work 1`] = `
<body>
  <div>
    <div
      class="DataSetControl_main-container"
      style="max-height: 693px;"
    >
      <div
        class="DataSetControl_grid-container"
      >
        <div>
          <div
            class="DataSetControl_grid-norecords"
          >
            undefined
          </div>
        </div>
      </div>
      <button
        class="DataSetControl_LoadMoreButton_Hidden_Style DataSetControl_LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`DataSetGrid toggle load more button if it has next page 1`] = `
<body>
  <div>
    <div
      class="DataSetControl_main-container"
      style="max-height: 693px;"
    >
      <div
        class="DataSetControl_grid-container"
      >
        <div>
          <div
            class="DataSetControl_grid-norecords"
          >
            undefined
          </div>
        </div>
      </div>
      <button
        class="DataSetControl_LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`DataSetGrid toggle load more when needed 1`] = `
<body>
  <div>
    <div
      class="DataSetControl_main-container"
      style="max-height: 693px;"
    >
      <div
        class="DataSetControl_grid-container"
      >
        <div>
          <div
            class="DataSetControl_grid-norecords"
          >
            undefined
          </div>
        </div>
      </div>
      <button
        class="DataSetControl_LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;
